force-app/main/default/objects/vlocity_cmt__AssessmentAnswer__c/fields/vlocity_cmt__Answer__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Answer__c</fullName>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>