force-app/main/default/objects/vlocity_cmt__AssessmentAnswer__c/fields/vlocity_cmt__IsTemplateAnswer__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsTemplateAnswer__c</fullName>
    <formula>vlocity_cmt__AssessmentQuestionId__r.vlocity_cmt__AssessmentId__r.vlocity_cmt__IsTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Template Answer</label>
    <type>Checkbox</type>
</CustomField>