force-app/main/default/objects/vlocity_cmt__AssessmentAnswer__c/fields/vlocity_cmt__Selected__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>